fixed bug, intro overlaps navbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,7 @@ body {
 } 
 
 #intro{
+    z-index: -1;
     position: relative;
     margin: 7% 0 2% 0;
     padding: 5% 1%; 
